--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -65,7 +65,7 @@ aliases:
 # Use a persistent storage volume for sqlite database files and local Active Storage files.
 # Recommended to change this to a mounted volume path that is backed up off server.
 volumes:
-  - "the_daily_dad_joke_storage:/rails/storage"
+  - "the_daily_dad_joke_storage:/data"
 
 
 # Bridge fingerprinted assets, like JS and CSS, between versions to avoid
