Add some constraints and cleanup routes

--- a/test/fixtures/jokes.yml
+++ b/test/fixtures/jokes.yml
@@ -5,17 +5,17 @@
 # Table name: jokes
 #
 #  id         :integer          not null, primary key
-#  answer     :string
-#  question   :string
+#  punchline  :string
+#  prompt     :string
 #  source     :string
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #  source_id  :string
 #
 one:
-  question: MyString
-  answer: MyString
+  prompt: MyString
+  punchline: MyString
 
 two:
-  question: MyString
-  answer: MyString
+  prompt: MyString
+  punchline: MyString
