--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -17,9 +17,9 @@ servers:
 # Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
 #
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
-# proxy:
-#   ssl: true
-#   host: 178.156.158.38
+proxy:
+  ssl: true
+  host: app.thedailydadjoke.com
 
 # Credentials for your image host.
 registry:
